# content_moderation

./: .gitignore  main.py  pyproject.toml  requirements.txt
artifacts/teacher/best/: metadata.json  teacher_thresholds.json
src/: api.py  config.py  data.py  exceptions.py  export_onnx.py  inference.py  main.py  models.py  settings.py  teacher.py  thresholds.py  train_teacher.py  training_builder.py  utils.py
src/content_moderation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
